# AdvPTproject

./: .gitignore  CMakeLists.txt  Protoss.h  README.md  Race.h  Terran.h  Terran_header.h  Zerg.h  Zerg_header.h  globalVarsCollection.txt  main.cpp  measureTime.h  showClasses.h
Optimization/: CMakeLists.txt  Opt.h  Opt_test.cpp  global_enums.h  list_builder.h  list_builder_test.cpp  mainOptimizer.cpp  mutations.h  natural_selection.h  parser.h  protoss_opt.cpp  techtree_protoss.csv  techtree_terran.csv  techtree_zerg.csv
Protoss/: .protoss_todo.swp  CMakeLists.txt  Protoss_header.h  Protoss_status.h  advancedBuild.txt  example.txt  mainProtoss.cpp  nameing_fail.txt  parser.h  parser_protoss.h  protoss_todo  simplebuild.txt  techtree_protoss.csv  testAll.cpp  testProtoss.cpp  validate.cpp
Protoss/validator/: CMakeLists.txt  parser.h  read_and_check.h  techtree_protoss.csv  validate.cpp
RandomCreator/: CMakeLists.txt  randomCreator.h  testRand.cpp
Terran/: CMakeLists.txt  TODO.txt  TerranScvMarine.txt  ValidatorTest.cpp  allBuildings.txt  allUnits.txt  barracks.txt  build.txt  extend.txt  factory.txt  mainTerran.cpp  multipleMule.txt  names.txt  own.txt  parser_terran.h  pushBattlecruiser.txt  refinery.txt  scvend.txt  starport.txt  terran3.txt  terranSpecial.txt  test.txt  testTerran.cpp  upgradeTest.txt
Validator/: CMakeLists.txt  Validator.h  ValidatorTerran.h  ValidatorZerg.h  list_builder.h  list_builder_test.cpp  validatorTest.cpp
Validator/validator_by_file/: CMakeLists.txt  advancedBuild.txt  parser.h  parser_test.cpp  parser_test.h  read_and_check.h  techtree_protoss.csv  (+2 more)
Zerg/: CMakeLists.txt  ZergDroneOverlordList.txt  allTest.txt  allTest_NoError.txt  droneTest.txt  initTest.txt  inject_morph_online.txt  mainZerg.cpp  onlyDroneHatcheryOverlord.txt  qandh.txt  testZerg.cpp
bash_scripts/: brood_lord_test  build.sh  build_win_old.sh  collect.sh  collect_opt.sh  dbg.sh  forwardSim.sh  forwardSim_win_old.sh  optimization.sh  optimize.sh  rerun.sh  resim.sh  test_all_protoss.sh  void_ray_test
